tests/compile_fail/invalid_subgrid_track_multiple_auto_fill_literal.stderr
error[E0451]: field `name_components` of struct `SubgridTrack` is private
  --> tests/compile_fail/invalid_subgrid_track_multiple_auto_fill_literal.rs:11:9
   |
10 |     let _subgrid = SubgridTrack {
   |                    ------------ in this type
11 |         name_components: vec![auto_fill.clone(), auto_fill],
   |         ^^^^^^^^^^^^^^^ private field
